# Student-Feedback-Bot

./: .gitignore  Makefile  pyproject.toml  test.py
src/: main.py
src/bot/: router.py  utils.py
src/bot/admin/handlers/: __init__.py
src/bot/handlers/: __init__.py  start.py
src/bot/middlewares/: __init__.py  database.py
src/bot/users/: keyboards.py  states.py  utils.py
src/bot/users/handlers/: __init__.py  about.py  menu.py  message.py  profile.py  start.py
src/bot/users/keyboards/: __init__.py  cancel.py  menu.py  message.py  profile.py  utils.py
src/bot/users/services/: onboarding.py
src/config/: .env.example  settings.py
src/database/: db.py
src/database/models/: __init__.py  base.py  category.py  message.py  user.py
src/middlewares/: __init__.py  database.py
src/migration/: env.py
src/migration/versions/: 1618a4126a75_add_a_admin_group_message_id_field_to_.py  2a0e51ca3a6d_add_users_table.py  50fff4e2380b_removed_the_category_id_field.py  75ea044f0abc_add_categories_table.py  9dfffe9fa0f9_created_category_model.py  af8861311f4c_add_messages_table.py  fb1c8b34b91b_added_field_registered_to_users_table.py
src/schemas/: categories.py  messages.py  users.py
src/services/repositories/: __init__.py  categories.py  category.py  messages.py  users.py
