[tool.poetry]
name = "student-feedback-bot"
version = "0.1.0"
description = ""
authors = ["Nabi Ayub <nabiaub908@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.15"
aiogram = "^3.24.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
alembic = "^1.18.1"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.45"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
